# docker-poetry-django

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
polls/: admin.py  models.py  views.py
templates/polls/: index.html
