[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = "A demo project dockerized with poetry"
authors = ["Soohee Kim"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = ">=0.12"
Django = "3.1.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
django = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
